--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,13 @@
-RewriteEngine on
+ RewriteEngine on
 
-RewriteRule ^([A-Za-z0-9_-]+)\.php$  index.php?pagename=$1 [NC,QSA]
+ RewriteRule ^([A-Za-z0-9_-]+)\.php$  index.php?pagename=$1 [NC,QSA]
+
+ RewriteCond %{HTTPS} off 
+ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+# # php -- BEGIN cPanel-generated handler, do not edit
+# # Set the “ea-php81” package as the default “PHP” programming language.
+<IfModule mime_module>
+	AddHandler application/x-httpd-ea-php81 .php .php8 .phtml
+ </IfModule>
+# # php -- END cPanel-generated handler, do not edit
